# SeminarAvDev

./: README.md
Arduino/Robot_Steuerung/: README.md  Robot_Steuerung.ino  scheduling.cpp  scheduling.h
ROS_Pakete/command_generation/: CMakeLists.txt  package.xml
ROS_Pakete/command_generation/launch/: command_generator.launch
ROS_Pakete/command_generation/src/: command_generation_node.cpp
ROS_Pakete/robot_car/: CMakeLists.txt  package.xml
ROS_Pakete/robot_car/launch/: complete_system.launch  joystick_node.launch
ROS_Pakete/robot_car/src/: commandClient.py  commandSocket.py  run.py
