<?xml version="1.0"?>
<package>
  <name>robot_car</name>
  <version>0.0.0</version>
  
  <license>None</license>
  
  <maintainer email="yourmail@web.com">David B</maintainer>
  
  <description>The robot_car package</description>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
